--- a/BookVerse/Views/Category/Index.cshtml
+++ b/BookVerse/Views/Category/Index.cshtml
@@ -1,1 +1,25 @@
-﻿<h1>Category</h1>
+﻿@model List<Category>
+
+<h1>Category List</h1>
+
+<table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <td>Category Name</td>
+            <td>Display Order</td>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var data in Model)
+        {
+            <tr>
+                <td>
+                    @data.CategoryName
+                </td>
+                <td>
+                    @data.DisplayOrder
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
