--- a/BookVerse/Views/Category/Index.cshtml
+++ b/BookVerse/Views/Category/Index.cshtml
@@ -1,25 +1,37 @@
 ﻿@model List<Category>
 
-<h1>Category List</h1>
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary text-white-50">Category List</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a class="btn btn-primary" asp-controller="Category" asp-action="Create">
+                <i class="bi bi-plus-circle"></i>
+            </a>
+        </div>
+    </div>
 
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <td>Category Name</td>
-            <td>Display Order</td>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var data in Model)
-        {
+    <table class="table table-bordered table-striped table-hover">
+        <thead>
             <tr>
-                <td>
-                    @data.CategoryName
-                </td>
-                <td>
-                    @data.DisplayOrder
-                </td>
+                <td>Category Name</td>
+                <td>Display Order</td>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var data in Model)
+            {
+                <tr>
+                    <td>
+                        @data.CategoryName
+                    </td>
+                    <td>
+                        @data.DisplayOrder
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
