--- a/BookVerse/Views/Category/Create.cshtml
+++ b/BookVerse/Views/Category/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Category
 
-<form>
+<form method="post">
     <div class="border p-3 mt-4">
 
         <div class="row pb-2">
@@ -8,14 +8,16 @@
             <hr/>
         </div>
 
-        <div class="mb-3">
-            <label>Category Name</label>
-            <input type="text" class="form-control" />
+        <div class="mb-3 row p-1">
+            <label asp-for="CategoryName" class="p-0"></label>
+            <input asp-for="CategoryName" class="form-control" />
+            <span asp-validation-for="CategoryName" class="text-danger"></span>
         </div>
 
-        <div class="mb-3">
-            <label>Display Order</label>
-            <input type="text" class="form-control" />
+        <div class="mb-3 row p-1">
+            <label asp-for="DisplayOrder" class="p-0"></label>
+            <input asp-for="DisplayOrder" class="form-control" />
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
 
         <button type="submit" class="btn btn-primary" style="width: 100px">Create</button>
