--- a/BookVerse/Views/Category/Index.cshtml
+++ b/BookVerse/Views/Category/Index.cshtml
@@ -17,6 +17,7 @@
             <tr>
                 <td>Category Name</td>
                 <td>Display Order</td>
+                <td></td>
             </tr>
         </thead>
         <tbody>
@@ -28,6 +29,16 @@
                     </td>
                     <td>
                         @data.DisplayOrder
+                    </td>
+                    <td>
+                        <div>
+                            <a class="btn btn-primary mx-2" asp-controller="Category" asp-action="Edit" asp-route-categoryId="@data.Id">
+                                <i class="bi bi-pencil-square"></i>
+                            </a>
+                            <a class="btn btn-danger mx-2" asp-controller="Category" asp-action="Delete" asp-route-categoryId="@data.Id">
+                                <i class="bi bi-trash3-fill"></i>
+                            </a>
+                        </div>
                     </td>
                 </tr>
             }
