--- a/BookVerse/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookVerse/Areas/Admin/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
             <h2 class="text-primary text-white-50">Product List</h2>
         </div>
         <div class="col-6 text-end">
-            <a class="btn btn-primary" asp-controller="Product" asp-action="Create">
+            <a class="btn btn-primary" asp-controller="Product" asp-action="Upsert">
                 <i class="bi bi-plus-circle"></i>
             </a>
         </div>
@@ -44,7 +44,7 @@
                     </td>
                     <td>
                         <div>
-                            <a class="btn btn-primary mx-2" asp-controller="Product" asp-action="Edit" asp-route-productId="@data.Id">
+                            <a class="btn btn-primary mx-2" asp-controller="Product" asp-action="Upsert" asp-route-productId="@data.Id">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
                             <a class="btn btn-danger mx-2" asp-controller="Product" asp-action="Delete" asp-route-productId="@data.Id">
