Image added while updateing

--- a/BookVerse/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BookVerse/Areas/Admin/Views/Product/Upsert.cshtml
@@ -9,6 +9,7 @@
 
     <form method="post" enctype="multipart/form-data">
         <input asp-for="Products.Id" hidden />
+        <input asp-for="Products.ImgUrl" hidden />
 
         <div class="row">
             <div class="col-10">
