image upload added while editing

--- a/BookVerse/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookVerse/Areas/Admin/Views/Product/Index.cshtml
@@ -40,7 +40,7 @@
                         @data.ListPrice
                     </td>
                     <td>
-                        @* @data. *@
+                        @data.Category.CategoryName
                     </td>
                     <td>
                         <div>
