WIP - hide content manager from all user

--- a/BookVerse/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/BookVerse/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using BookVerse.Areas.Identity
 @using BookVerse.Areas.Identity.Pages
+@using Book.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
