--- a/BookVerse/Views/Shared/_Layout.cshtml
+++ b/BookVerse/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-
+                        @if(User.IsInRole(StaticDetails))
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Content Panel
+                                Content Managent
                             </a>
                             <ul class="dropdown-menu">
 
