--- a/BookVerse/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BookVerse/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BookVerse
 @using Book.Models
 @using Book.Models.ViewModels
+@using Book.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
