--- a/BookVerse/Views/Shared/_Layout.cshtml
+++ b/BookVerse/Views/Shared/_Layout.cshtml
@@ -39,6 +39,10 @@
                                     <li class="nav-item">
                                         <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
                                     </li>
+
+                                    <li class="nav-item">
+                                        <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+                                    </li>
                                     <li><hr class="dropdown-divider"></li>
 
                                 </ul>
