--- a/BookVerse/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookVerse/Areas/Customer/Views/Home/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ShoppingCart
 
 <form method="post">
-   @*  <input hidden asp-for="ProductId" /> *@
+    <input hidden asp-for="ProductId" />
     <div class="card shadow border-0 mt-4 mb-4">
         <div class="card-header bg-secondary bg-gradient text-light py-4">
             <div class="row">
@@ -21,16 +21,19 @@
                     </div>
                 </div>
                 <div class="row">
-                   @*  <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
+                    <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
+
+                        <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
+                            <img src="@Model.Product.ImgUrl" width="100%" class="rounded" />
+                        </div>
 
 
-
-                        @if (Model.Product.ProductImages != null && Model.Product.ProductImages.Count > 0) {
+                       @*  @if (Model.Product.ImgUrl != null && Model.Product.ImgUrl.Count > 0) {
                             <div id="carouselExampleIndicators" class="carousel  slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
 
                                     @foreach(var imageWithIndex in 
-                                    Model.Product.ProductImages
+                                    Model.Product.ImgUrl
                                    .Select((image, index) => new { Image = image, Index = index })) {
                                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="@imageWithIndex.Index" 
                                         class="@(imageWithIndex.Index==0?"active":"")" aria-current="true" aria-label="Slide 1"></button>
@@ -40,7 +43,7 @@
                                 </div>
                                 <div class="carousel-inner">
                                     @foreach (var imageWithIndex in
-                                   Model.Product.ProductImages
+                                   Model.Product.ImgUrl
                                    .Select((image, index) => new { Image = image, Index = index })) {
                                         <div class="@(imageWithIndex.Index==0?"carousel-item active":"carousel-item")">
                                             <img src="@imageWithIndex.Image.ImageUrl" class="d-block w-100" alt="...">
@@ -56,11 +59,9 @@
                                     <span class="visually-hidden">Next</span>
                                 </button>
                             </div>
-
-                        }
-                    </div> *@
+                        } *@
+                    </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
-
                         <div class="col-12 col-md-6 pb-4">
                             <span class="badge">@Model.Product.Category.CategoryName</span>
                         </div>
@@ -113,8 +114,8 @@
                                           id="inputGroup-sizing-default">
                                         Count
                                     </span>
-                                    @* <input asp-for="Count" type="number" value="1" class="form-control text-end"
-                                           aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" /> *@
+                                    <input asp-for="Count" type="number" value="1" class="form-control text-end"
+                                           aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
 
                                 </div>
                             </div>
