--- a/BookVerse/Areas/Admin/Views/Order/Index.cshtml
+++ b/BookVerse/Areas/Admin/Views/Order/Index.cshtml
@@ -3,11 +3,11 @@
 
     var status = Context.Request.Query["status"];
 
-    var pending = "text-primary";
-    var all = "text-primary";
-    var inprocess= "text-primary";
-    var completed = "text-primary";
-    var rejected = "text-primary";
+    var pending = "text-muted";
+    var all = "text-muted";
+    var inprocess = "text-muted";
+    var completed = "text-muted";
+    var rejected = "text-muted";
 
     switch (status)
     {
@@ -36,7 +36,7 @@
 <div class="border p-3">
     <div class="d-flex justify-content-between mb-3">
         <div class="p-2">
-            <h2 class="text-primary">Order's List </h2>
+            <h2 class="text-white">Order's List </h2>
         </div>
         <div class="p-2">
             <ul class="list-group list-group-horizontal-sm">
