--- a/BookVerse/Areas/Customer/Views/Cart/Index.cshtml
+++ b/BookVerse/Areas/Customer/Views/Cart/Index.cshtml
@@ -40,24 +40,22 @@
                                     </h6>
                                 </div>
 
-                                <div class="col-6 col-sm-4 col-lg-6">
-                                    <div class="float-right mx-1">
-                                        <a asp-action="plus" asp-route-cartId="@item.Id" class="btn btn-primary">
-                                            <i class="fas fa-plus"></i>
+                                <div class="col-6 col-sm-4 col-lg-6 pt-2">
+                                    <div class="w-75 btn-group" role="group">
+                                        <a asp-action="plus" asp-route-cartId="@item.Id" class="btn btn-outline-primary bg-gradient py-2">
+                                            <i class="bi bi-plus-square"></i>
+                                        </a> &nbsp;
+                                        <a asp-action="minus" asp-route-cartId="@item.Id" class="btn btn-outline-primary bg-gradient py-2">
+                                            <i class="bi bi-dash-square"></i>
                                         </a>
                                     </div>
-                                    <div class="float-right mx-1">
-                                        <a asp-action="minus" asp-route-cartId="@item.Id" class="btn btn-danger">
-                                            <i class="fas fa-minus"></i>
-                                        </a>
-                                    </div>
+
                                 </div>
-                                <div class="col-2 col-sm-4 col-lg-2 text-right">
-                                    <a asp-action="remove" asp-route-cartId="@item.Id" class="btn btn-danger">
-                                        <i class="fas fa-trash"></i>
+                                <div class="col-3 col-sm-4 col-lg-2 offset-lg-1 text-right pt-2">
+                                    <a asp-action="remove" asp-route-cartId="@item.Id" class="btn btn-danger bg-gradient py-2 ">
+                                        <i class="bi bi-trash-fill"></i>
                                     </a>
                                 </div>
-
                             </div>
 
                         </div>
