--- a/BookVerse/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookVerse/Areas/Customer/Views/Home/Details.cshtml
@@ -15,7 +15,7 @@
             <div class="py-3">
                 <div class="row">
                     <div class="col-6 col-md-2 offset-lg-1 pb-1">
-                        <a asp-action="Index" class="btn btn-outline-primary bg-gradient mb-5 fw-semibold btn-sm text-uppercase">
+                        <a asp-action="Index" class="btn btn-outline-primary text-bg-primary mb-5 fw-semibold btn-sm text-uppercase">
                             <small>Back to home</small>
                         </a>
                     </div>
@@ -24,7 +24,7 @@
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
 
                         <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                            <img src="@Model.Product.ImgUrl" width="100%" class="rounded" />
+                            <img src="@Model.Product.ImgUrl" @* width="100%"  *@ class="rounded book-image" />
                         </div>
 
 
@@ -63,13 +63,13 @@
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
                         <div class="col-12 col-md-6 pb-4">
-                            <span class="badge">@Model.Product.Category.CategoryName</span>
+                            <span class="badge bg-info">@Model.Product.Category.CategoryName</span>
                         </div>
                         <div class="row ps-2">
-                            <h6 class="text-dark text-opacity-50 ">ISBN : @Model.Product.ISBN</h6>
+                            <h6 class="text-muted text-opacity-50 ">ISBN : @Model.Product.ISBN</h6>
                         </div>
                         <div class="row ps-2">
-                            <h6 class="text-dark text-opacity-50  pb-2">
+                            <h6 class="text-muted text-opacity-50  pb-2">
                                 List Price:
                                 <span class="text-decoration-line-through">
                                     @Model.Product.ListPrice.ToString("c")
@@ -77,7 +77,7 @@
                             </h6>
                         </div>
                         <div class="row text-center ps-2">
-                            <div class="p-1 col-3 col-lg-2 bg-white border-bottom">
+                            <div class="p-1 col-3 col-lg-2 bg-dark-subtle border-bottom">
                                 <div class="text-dark text-opacity-50 fw-semibold">Quantity</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white border-bottom">
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="row text-center ps-2">
-                            <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
+                            <div class="p-1 col-3 col-lg-2 bg-dark-subtle text-warning fw-bold">
                                 <div>Price</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
