--- a/BookVerse/Areas/Customer/Views/Home/Index.cshtml
+++ b/BookVerse/Areas/Customer/Views/Home/Index.cshtml
@@ -6,10 +6,10 @@
         <div class="col-lg-3 col-sm-6">
             <div class="row p-2">
                 <div class="col-12 p-1">
-                    <div class="card border-0 p-3 shadow  border-top border-5 rounded">
+                    <div class="card border-0 p-3 shadow border-top border-5 rounded">
                         @if (product.ImgUrl != null && product.ImgUrl.Count() > 0)
                         {
-                            <img src="@product.ImgUrl" class="card-img-top rounded" />
+                            <img src="@product.ImgUrl" class="card-img-top book-image rounded" />
                         }
                         else
                         {
