--- a/BookVerse/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
+++ b/BookVerse/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container row">
     <div class="col-12 text-center">
-        <h1 class="text-primary text-center">Order Placed Successfully!</h1><br />
+        <h1 class="text-info text-center">Order Placed Successfully!</h1><br />
     </div>
     <div class="col-12 text-center" style="color:white">
         <br />
