--- a/BookVerse/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookVerse/Areas/Customer/Views/Home/Details.cshtml
@@ -24,7 +24,7 @@
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
 
                         <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
-                            <img src="@Model.Product.ImgUrl" @* width="100%"  *@ class="rounded book-image" />
+                            <img src="@Model.Product.ImgUrl" class="rounded book-image" />
                         </div>
 
 
