--- a/BookVerse/Views/Shared/_Layout.cshtml
+++ b/BookVerse/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                                     Content Managent
                                 </a>
                                 <ul class="dropdown-menu">
-
+                                            
                                     <li class="nav-item">
                                         <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                     </li>
@@ -55,6 +55,9 @@
                                         <a class="dropdown-item text-white" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
                                     </li>
                                     <li><hr class="dropdown-divider"></li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item text-white" asp-area="Identity" asp-page="/Account/Register" >Create User</a>
+                                    </li>
 
                                 </ul>
                             </li>
